<resources>
    <string name="app_name">Nutrients</string>

    <string name="label_name">Name</string>
    <string name="label_sum">Sum</string>

    <string name="delete">Delete</string>
    <string name="imexport">Import/Export</string>
    <string name="settings">Settings</string>

    <string name="settings_nutrient_one_label">Nutrient 1</string>
    <string name="settings_nutrient_two_label">Nutrient 2</string>
    <string name="settings_nutrient_three_label">Nutrient 3</string>

    <string name="settings_text_empty_field">No field must be empty!</string>

    <string name="delete_title">Deleting and Reset</string>
    <string name="single_delete_info"><b>Hint:</b> Delete single entries by a long click!</string>
    <string name="label_delete_data">Delete Data</string>
    <string name="label_delete_data_until">Delete until (inclusive):</string>
    <string name="button_delete_data">Delete</string>
    <string name="delete_food_items_dialog_title">Delete Data</string>
    <string name="delete_food_items_dialog_message">Do really want to delete the Data?</string>

    <string name="imexport_title">Import and Export</string>
    <string name="imexport_info"><b>Hint:</b> Files are saved in the folder <i>Nutrients</i>. Files to import must also be in this folder!</string>
    <string name="imexport_category_overwrite">Overwrite existing categories</string>
    <string name="storage_not_writeable">No access to the data storage!</string>
    <string name="storage_not_readable">No access to the data storage!</string>
    <string name="file_not_createable">File cannot be created!</string>
    <string name="file_not_importable">Import failed!</string>
    <string name="file_not_available">File was not found!</string>
    <string name="savings_folder">Nutrients</string>
    <string name="import_success_settings">Settings were imported!</string>
    <string name="import_success_categories">Categories were imported!</string>
    <string name="export_success_settings">Settings were exported!</string>
    <string name="export_success_categories">Categories were exported!</string>

    <string name="alert_dialog_file_exists_title">Export</string>
    <string name="error_filename_empty">Filename is necessary!</string>
    <string name="alert_dialog_file_exists_message">File already exists. Overwrite it?</string>

    <string name="default_setting_filename">App-Nutrients-Settings</string>
    <string name="default_category_filename">App-Nutrients-Categories</string>


    <string name="default_unit_foods">g</string>
    <string name="default_unit_drinks">ml</string>
    <string name="default_nutrient_one">Energy</string>
    <string name="default_unit_one">kcal</string>
    <string name="default_nutrient_two">Sugar</string>
    <string name="default_unit_two">g</string>
    <string name="default_nutrient_three">Fat</string>
    <string name="default_unit_three">g</string>

    <string name="piece">Piece</string>
    <string name="pieces">Pieces</string>
    <string name="amount_per_piece">Amount per Piece</string>
    <string name="per">per</string>
    <string name="in">in</string>
    <string name="bracket_open">(</string>
    <string name="bracket_close">)</string>
    <string name="divider">/</string>

    <string name="label_date">Date</string>
    <string name="label_category">Category</string>

    <string name="average">Average</string>

    <string name="label_nutrients">Nutrients</string>
    <string name="label_amount_blank">Amount</string>

    <string name="label_food_note">Description</string>
    <string name="default_note">### No Description ###</string>

    <string name="label_goal">Goal</string>
    <string name="label_unit">Unit</string>
    <string name="label_units">Units</string>
    <string name="label_drinks">Drinks</string>
    <string name="label_foods">Food</string>

    <string name="label_category_name">Name</string>
    <string name="label_categories">Categories</string>
    <string name="label_filename">Filename</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear_categories">Delete all Categories</string>
    <string name="button_reset_categories">Reset Categories</string>
    <string name="button_reset_values">Reset Goals</string>
    <string name="button_reset_settings">Reset Settings</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>

    <string name="goals_every_day_separate">Set different goals per day</string>
    <string name="goals_every_day">Everyday Goals</string>
    <string name="goals_not_every_day">Daily Goals</string>

    <string name="tabTitleOverview">Today</string>
    <string name="tabTitleList">List</string>
    <string name="tabTitleHistory">Trend</string>
    <string name="tabTitleCategories">Categories</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="add_item">+</string>


    <string name="food_item_delete_dialog_title">"Category: "</string>
    <string name="food_item_delete_dialog_message">Do you really want to delete this Entry?</string>
    <string name="food_item_delete_dialog_btpositiv">Yes</string>
    <string name="food_item_delete_dialog_btnegativ">No</string>

    <string name="food_item_dialog_title_edit">Change Entry</string>
    <string name="food_item_dialog_title_new">Create new Entry</string>
    <string name="food_item_dialog_btCalculate">Calculate values</string>
    <string name="food_item_dialog_error_empty_name">Enter a Category!</string>
    <string name="food_item_dialog_error_unknown_category">Unknown Category!</string>

    <string name="preset_cola">Cola</string>
    <string name="preset_fanta">Fanta</string>
    <string name="preset_apfelsaft">Apple Juice</string>
    <string name="preset_milch">Milk</string>
    <string name="preset_tee">Tea</string>
    <string name="preset_kaffee">Coffee</string>
    <string name="preset_orangensaft">Orange Juice</string>
    <string name="preset_bier">Beer</string>
    <string name="preset_wein">Wine</string>
    <string name="preset_schnaps">Schnaps</string>
    <string name="preset_fischstaebchen">Fish Sticks</string>
    <string name="preset_kopfsalat">Lettuce</string>
    <string name="preset_kartoffelsalat">Potato Salad</string>
    <string name="preset_pasta">Pasta</string>
    <string name="preset_pommes">French Fries</string>
    <string name="preset_spaetzle">Spaetzle</string>
    <string name="preset_brot">Bread</string>
    <string name="preset_linsen">Lentils</string>
    <string name="preset_spaghetti_bolognese">Spaghetti Bolognese</string>
    <string name="preset_schweineschnitzel">Pork Cutlet</string>
    <string name="preset_maultaschen">Staffed Pasta</string>
    <string name="preset_wurstsalat">Sausage Salad</string>
    <string name="preset_wurst">Sausage</string>
    <string name="preset_gulaschsuppe">Goulash Soup</string>
    <string name="preset_gemuesebruehe">Vegetable Broth</string>
    <string name="preset_pfannkuchen">Pancakes</string>
    <string name="preset_schokolade">Chocolate</string>
    <string name="preset_gummibaerchen">Gummy Bears</string>
    <string name="preset_kartoffelchips">Potato Chips</string>

    <string name="overview_goal">"Goal: "</string>
    <string name="overview_sum">"Sum: "</string>

    <string name="label_history_time">Number of Days</string>
    <string name="history_time_dialog_title">Shown Days</string>
    <string name="dialog_history_button_min">Min.</string>
    <string name="dialog_history_button_standard">Normal</string>
    <string name="dialog_history_button_max">Max.</string>

    <string name="category_dialog_title_new">Create new Category</string>
    <string name="category_dialog_title_edit">Change Category</string>
    <string name="category_dialog_error_empty_name">Enter a name!</string>
    <string name="category_dialog_error_duplicate_name">Category exists already!</string>

    <string name="delete_category_dialog_title">"Category: "</string>
    <string name="delete_category_dialog_message">Do you really want to delete this Category?</string>
    <string name="delete_all_categories_dialog_title">Delete all Categories</string>
    <string name="delete_all_categories_dialog_message">Do you really want to delete all Categories?</string>
    <string name="reset_categories_dialog_title">Reset Categories</string>
    <string name="reset_categories_dialog_message">Do you want to reset all Categories?</string>
    <string name="reset_goals_dialog_title">Reset Goals</string>
    <string name="reset_goals_dialog_message">Set all Goals to the default-values?</string>
    <string name="settings_reset_all_fields_dialog_title">Reset Settings</string>
    <string name="settings_reset_all_fields_dialog_message">Set all Nutrient Names and Units to the default values?</string>

    <string name="file_already_exists">File already exists. Please delete the file first!</string>

    <string name="top_test">ADS ADS ADS ADS</string>
</resources>
