<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".general.MainActivity">

    <item
        android:id="@+id/menu_calendar"
        android:title="@string/imexport"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="0"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_imexport"
        android:title="@string/imexport"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"/>

</menu>