<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="1000dp"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        android:paddingTop="@dimen/dialog_vertical_margin"
        android:paddingBottom="@dimen/dialog_vertical_margin"
        tools:context="de.tommy13.sugar.general.MainActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dangerous_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_delete_info"
                android:gravity="start" />

        </LinearLayout>




        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overview_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="@dimen/panel_to_panel_interspace_dialog">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_delete_data"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:layout_marginBottom="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_delete_data_until" />
                <Button
                    android:id="@+id/delete_data_date"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/open_input_button"
                    android:textAllCaps="false"
                    android:textColor="@color/inputButton" />
            </LinearLayout>

            <Button
                android:id="@+id/button_delete_data"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/dangerous_button"
                android:textColor="#ffffff"
                android:text="@string/button_delete_data" />

        </LinearLayout>







        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/panel_to_panel_interspace_dialog"
            android:background="@drawable/overview_border"
            android:paddingStart="@dimen/setting_button_side"
            android:paddingEnd="@dimen/setting_button_side"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/delete_reset_values"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/dangerous_button"
                android:textColor="#ffffff"
                android:text="@string/button_reset_values" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/delete_reset_categories"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/dangerous_button"
                android:textColor="#ffffff"
                android:text="@string/button_reset_categories" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/delete_delete_categories"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/dangerous_button"
                android:textColor="#ffffff"
                android:text="@string/button_clear_categories" />

        </LinearLayout>





        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dialog_margin_to_button">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/delete_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/standard_button"
                android:textColor="#ffffff"
                android:text="@string/button_ok" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>