<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="1000dp"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        android:paddingTop="@dimen/dialog_vertical_margin"
        android:paddingBottom="@dimen/dialog_vertical_margin"
        tools:context="de.tommy13.sugar.general.MainActivity">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overview_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date" />

            <Button
                android:id="@+id/food_item_dialog_btdate"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/open_input_button"
                android:textAllCaps="false"
                android:maxLines="1"
                android:textColor="@color/inputButton" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/label_food_note" />

            <Button
                android:id="@+id/food_item_dialog_note"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/open_input_button"
                android:textAllCaps="false"
                android:maxLines="1"
                android:textColor="@color/inputButton" />


        </LinearLayout>









        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overview_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="@dimen/panel_to_panel_interspace_dialog">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_category" />

            <Button
                android:id="@+id/food_item_dialog_category"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/open_input_button"
                android:textAllCaps="false"
                android:maxLines="1"
                android:textColor="@color/inputButton" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_weight="32">
                    <TextView
                        android:id="@+id/food_item_dialog_tvPieces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pieces"/>
                    <Button
                        android:id="@+id/food_item_dialog_pieces"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/open_input_button"
                        android:textAllCaps="false"
                        android:maxLines="1"
                        android:textColor="@color/inputButton" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_weight="58">
                    <Button
                        android:id="@+id/food_item_dialog_btCalcPieces"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/standard_button"
                        android:textAllCaps="false"
                        android:textColor="@color/inputButton"
                        android:text="@string/food_item_dialog_btCalculate" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_weight="32">
                    <TextView
                        android:id="@+id/food_item_dialog_tvAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/food_item_dialog_amount"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@drawable/open_input_button"
                        android:textAllCaps="false"
                        android:maxLines="1"
                        android:textColor="@color/inputButton" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_weight="58">
                    <Button
                        android:id="@+id/food_item_dialog_btCalcAmount"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/standard_button"
                        android:textAllCaps="false"
                        android:textColor="@color/inputButton"
                        android:text="@string/food_item_dialog_btCalculate" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent" />

            </LinearLayout>



        </LinearLayout>






        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overview_border"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="@dimen/panel_to_panel_interspace_dialog">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="32">
                <TextView
                    android:id="@+id/food_item_dialog_tvEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/food_item_dialog_energy"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/open_input_button"
                    android:textAllCaps="false"
                    android:maxLines="1"
                    android:textColor="@color/inputButton" />
            </LinearLayout>


            <Space
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="32">
                <TextView
                    android:id="@+id/food_item_dialog_tvSugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/food_item_dialog_sugar"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/open_input_button"
                    android:textAllCaps="false"
                    android:maxLines="1"
                    android:textColor="@color/inputButton" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_weight="32">

                <TextView
                    android:id="@+id/food_item_dialog_tvFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/food_item_dialog_fat"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/open_input_button"
                    android:textAllCaps="false"
                    android:maxLines="1"
                    android:textColor="@color/inputButton" />
            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dialog_margin_to_button">

            <Button
                android:id="@+id/food_item_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:background="@drawable/standard_button"
                android:textColor="#ffffff"
                android:maxLines="1"
                android:text="@string/button_cancel" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="4" />

            <Button
                android:id="@+id/food_item_dialog_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="48"
                android:background="@drawable/standard_button"
                android:textColor="#ffffff"
                android:maxLines="1"
                android:text="@string/button_save" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>